# acme

./: pyproject.toml
acme/: analysis_spec.py  blocks.py  composer.py  provenance.py  registry.py  writers.py
acme/backends/: cobaya.py
acme/cli/: main.py
acme/drivers/: cobaya_launch.py
acme/plugins/: __init__.py  transforms.py
acme/plugins/augmenters/: candl.py  jax_utility.py  ole.py
blocks/datasets/: SPT3G_D1_TnE_lite_candl.yaml  act_dr6_cmbonly_native.yaml  desi_dr2_bao.yaml  p_act_native.yaml  planck_2018_highl_plik.yaml  planck_2018_lowl.yaml
blocks/params/: lcdm_class.yaml
blocks/sampler/: cobaya_mcmc_default.yaml
blocks/theory/: class_default.yaml  class_high_precision.yaml  ole_class_default.yaml  ole_class_high_precision.yaml
registries/: d1.yaml
specs/: lcdm_spt_class.yaml
